Remove ANSI-C support

--- a/make/msw/dos16/gcc/makefile
+++ b/make/msw/dos16/gcc/makefile
@@ -29,25 +29,13 @@ include ../../../setup/gcc.ini
 
 
 # The compiler executable.
-CC := gxx
-# For now, for the DJGPP is used the gxx even for ANSI-C compiling, to avoid
-# confusion between DJGPP and MinGW in batch processing mode for all MSW
-# platforms.
-
-# Using response file to avoid "line-too-long" problem.
-CC_USE_RESPONSE_FILE := 1
-
-# The compiler executable.
-CXX := $(CC)
-
-# Using response file to avoid "line-too-long" problem.
-CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
-
+CXX := gxx
 
 # The linker executable.
 LNKC := $(CXX)
 
 # Using response file to avoid "line-too-long" problem.
+CXX_USE_RESPONSE_FILE := 1
 LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
 
 
