--- a/make/msw/setup/watcom.ini
+++ b/make/msw/setup/watcom.ini
@@ -17,35 +17,6 @@
 OBJ_SFX := obj
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := wcc386
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -zq $(CFLAGS_TARGET)
-
-# Output name flag.
-CC_OUT := -fo
-# Compile-only flag.
-CC_COMPILE_ONLY :=
-# Macro definition flag.
-CC_DEFINE := -d
-# Include directory flag.
-CC_INCLUDE := -i
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -od -d2 -db -wx
-CFLAGS_RELEASE := -ox -d0 -w0
-CFLAGS_LIB := -bc
-CFLAGS_LIBMT := -bc $(CFLAGS_MT)
-CFLAGS_DLL := $(CFLAGS_MT)
-CFLAGS_DLL_DLL := -bd
-CFLAGS_DLL_EXE := -bc
-
-
 # C++ compiler settings.
 
 # The compiler executable.
@@ -54,25 +25,25 @@ CXX := wpp386
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -xs -xr
+CXXFLAGS := -zq $(CXXFLAGS_TARGET) -xs -xr
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -fo
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY :=
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -d
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -i
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -ew
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
+CXXFLAGS_DEBUG := -od -d2 -db -wx -ew
+CXXFLAGS_RELEASE := -ox -d0 -w0
+CXXFLAGS_LIB := -bc
+CXXFLAGS_LIBMT := -bc $(CFLAGS_MT)
+CXXFLAGS_DLL := $(CFLAGS_MT)
+CXXFLAGS_DLL_DLL := -bd
+CXXFLAGS_DLL_EXE := -bc
 
 
 # Resource compiler settings.
