--- a/make/unix/hp-ia/gcc32/makefile
+++ b/make/unix/hp-ia/gcc32/makefile
@@ -25,8 +25,8 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
 # The target flags.
-CFLAGS_TARGET := -milp32
-CFLAGS_TARGET_MT := -pthread
+CXXFLAGS_TARGET := -milp32
+CXXFLAGS_TARGET_MT := -pthread
 
 # Include default GCC definitions.
 include ../../../setup/gcc.ini
