--- a/make/unix/setup/acc.ini
+++ b/make/unix/setup/acc.ini
@@ -17,40 +17,6 @@
 OBJ_SFX := o
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := cc
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-CC_WARNING_FILE := 2
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET) -z
-# -Winvalid-pch
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g +w
-CFLAGS_RELEASE := -w +O3
-# +O4 +Oall
-CFLAGS_LIB :=
-CFLAGS_LIBMT := -mt
-CFLAGS_DLL := -mt
-CFLAGS_DLL_DLL := +z
-
-
 # C++ compiler settings.
 
 # The compiler executable.
@@ -58,29 +24,30 @@ CXX := aCC
 
 # The warning output file.
 # ('0' or '' for stdout, '2' for stderr)
-CXX_WARNING_FILE := $(CC_WARNING_FILE)
+CXX_WARNING_FILE := 2
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS)
+CXXFLAGS := $(CXXFLAGS_TARGET) -z
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -o 
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY := -c
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -D
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -I
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
+CXXFLAGS_DEBUG := -g +w
+CXXFLAGS_RELEASE := -w +O3
+# +O4 +Oall
+CXXFLAGS_LIB :=
+CXXFLAGS_LIBMT := -mt
+CXXFLAGS_DLL := -mt
+CXXFLAGS_DLL_DLL := +z
 
 
 ##########################
