--- a/make/global.ini
+++ b/make/global.ini
@@ -30,16 +30,14 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 # Source files list.
 MXCPP_SRC_LIST =	\
-libmain.cpp	\
-entry.cpp	\
-debug.cpp	\
+LibMain.cpp	\
+Debug.cpp	\
 Memory.cpp	\
 new.cpp	\
 OutOfMem.cpp	\
 Class.cpp	\
 Except.cpp	\
-log.cpp	\
-malloc.cpp	\
+Log.cpp	\
 Stream.cpp	\
 FileStrm.cpp	\
 StdStrm.cpp	\
@@ -55,7 +53,6 @@ $(MXCPP_RES_LIST_PLATFORM)
 MXCPP_TEST_LIST =	\
 Except.cpp	\
 Memory.cpp	\
-purec.c	\
 $(MXCPP_TEST_LIST_PLATFORM)
 
 
@@ -123,25 +120,17 @@ MXCPP_RESPONSE_FILE := response.rsp
 # List of all compilers.
 #
 # Used to automatic creation of build flags.
-MXCPP_COMPILERS_LIST := C CXX RC LNKC_ LIBC_ DLLC_
-
-# Flags of the ANSI-C compiler for different configurations.
-MXCPP_CFLAGS_LIB :=
-MXCPP_CFLAGS_LIBMT := $(CC_DEFINE)MT
-MXCPP_CFLAGS_DLL := $(CC_DEFINE)MT
-
-MXCPP_CFLAGS_DEBUG := $(CC_DEFINE)DEBUG
-MXCPP_CFLAGS_RELEASE :=
-MXCPP_CFLAGS_ANSI :=
-MXCPP_CFLAGS_UNICODE := $(CC_DEFINE)UNICODE
+MXCPP_COMPILERS_LIST := CXX RC LNKC_ LIBC_ DLLC_
 
 # Flags of the C++ compiler for different configurations.
-$(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
-	$(eval MXCPP_CXXFLAGS_$(config) := $(MXCPP_CFLAGS_$(config))))
+MXCPP_CXXFLAGS_LIB :=
+MXCPP_CXXFLAGS_LIBMT := $(CXX_DEFINE)MT
+MXCPP_CXXFLAGS_DLL := $(CXX_DEFINE)MT
 
-$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
-$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
-	$(eval MXCPP_CXXFLAGS_$(libtype)_$(config) := $(MXCPP_CFLAGS_$(libtype)_$(config)))))
+MXCPP_CXXFLAGS_DEBUG := $(CXX_DEFINE)DEBUG
+MXCPP_CXXFLAGS_RELEASE :=
+MXCPP_CXXFLAGS_ANSI :=
+MXCPP_CXXFLAGS_UNICODE := $(CXX_DEFINE)UNICODE
 
 # Flags of the resource compiler for different configurations.
 MXCPP_RCFLAGS_DEBUG := $(RC_DEFINE)_DEBUG
@@ -178,22 +167,12 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # The standard command for compiling source files.
 #
 # @param $(1) The compiler name.
-# @param $(2) The compiler flags ID.
-# @param $(3) The source file name(s).
-# @param $(4) The extra compile flags.
-# @param $(5) The library configuration type.
-# @param $(6) The character configuration type.
-# @param $(7) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $$(subst /,$$(PATH_SEP),$(3))
-
-# The command for compiling ANSI-C sources.
-#
-# @param $(1) The source file name(s).
-# @param $(2) The extra compile flags.
-# @param $(3) The library configuration type.
-# @param $(4) The character configuration type.
-# @param $(5) The debuginfo configuration type.
-MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4),$(5))
+# @param $(2) The source file name(s).
+# @param $(3) The extra compile flags.
+# @param $(4) The library configuration type.
+# @param $(5) The character configuration type.
+# @param $(6) The debuginfo configuration type.
+MXCPP_COMPILE_STANDARD = $(MXCPP_$(1)FLAGS) $(if $(strip $(MXCPP_$(1)FLAGS_$(4))),$(MXCPP_$(1)FLAGS_$(4)) )$(if $(strip $(MXCPP_$(1)FLAGS_$(5))),$(MXCPP_$(1)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)FLAGS_$(6))),$(MXCPP_$(1)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(1)FLAGS_$(4)_$(5))),$(MXCPP_$(1)FLAGS_$(4)_$(5)) )$(if $(strip $(MXCPP_$(1)FLAGS_$(4)_$(6))),$(MXCPP_$(1)FLAGS_$(4)_$(6)) )$(if $(strip $(3)),$(3) )$(if $(strip $($(1)FLAGS_OPTIONS)),$($(1)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $$(subst /,$$(PATH_SEP),$(2))
 
 # The command for compiling C++ sources.
 #
@@ -202,14 +181,14 @@ MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4),$(5))
 # @param $(3) The library configuration type.
 # @param $(4) The character configuration type.
 # @param $(5) The debuginfo configuration type.
-MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4),$(5))
+MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,$(1),$(2),$(3),$(4),$(5))
 
 # The command for compiling resources.
 #
 # @param $(1) The source file name(s).
 # @param $(2) The character configuration type.
 # @param $(3) The debuginfo configuration type.
-MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,,$(3),$(4))
+MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,$(1),,,$(3),$(4))
 
 
 # Set the default linker build schemes.
