--- a/make/msw/dos16/dmc/makefile
+++ b/make/msw/dos16/dmc/makefile
@@ -25,7 +25,7 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
 # The target flags.
-CFLAGS_TARGET := -msd
+CXXFLAGS_TARGET := -msd
 
 
 # Include default DMC definitions.
@@ -33,12 +33,7 @@ include ../../setup/dmc.ini
 
 
 # Using response file to avoid "line-too-long" problem.
-CC_USE_RESPONSE_FILE := 1
-
-# Using response file to avoid "line-too-long" problem.
-CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
-
-# Using response file to avoid "line-too-long" problem.
+CXX_USE_RESPONSE_FILE := 1
 LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
 
 
