--- a/make/msw/dos32/dmc/makefile
+++ b/make/msw/dos32/dmc/makefile
@@ -25,23 +25,18 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
 # The target flags.
-CFLAGS_TARGET := -mxd
+CXXFLAGS_TARGET := -mxd
 
 # Include default DMC definitions.
 include ../../setup/dmc.ini
 
 
 # Using response file to avoid "line-too-long" problem.
-CC_USE_RESPONSE_FILE := 1
-
-# Using response file to avoid "line-too-long" problem.
-CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
+CXX_USE_RESPONSE_FILE := 1
+LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
 
 # The target flags.
 LNKC_FLAGS += x32.lib
-
-# Using response file to avoid "line-too-long" problem.
-LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
 
 
 # Include parent definitions.
