--- a/make/msw/setup/dmc.ini
+++ b/make/msw/setup/dmc.ini
@@ -17,56 +17,28 @@
 OBJ_SFX := obj
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := dmc
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET)
-
-# Output name flag.
-CC_OUT := -o
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g -w- -D -o-all
-CFLAGS_RELEASE := -w -o
-
-
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := $(CC)
+CXX := dmc
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -Ae -Ar
+CXXFLAGS := $(CXXFLAGS_TARGET) -Ae -Ar
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -o
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY := -c
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -D
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -I
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
+CXXFLAGS_DEBUG := -g -w- -D -o-all
+CXXFLAGS_RELEASE := -w -o
 
 
 # Resource compiler settings.
