--- a/make/msw/setup/msvc.ini
+++ b/make/msw/setup/msvc.ini
@@ -17,70 +17,37 @@
 OBJ_SFX := obj
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := cl
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -nologo -GF
-
-# Output name flag.
-CC_OUT := -Fo
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od $(CFLAGS_DEBUG_EXTRA)
-CFLAGS_RELEASE := -W3 -O2
-CFLAGS_LIB_DEBUG := $(CFLAGS_LIB_RUNTIME)d
-CFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RUNTIME)
-CFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_RUNTIME)d
-CFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RUNTIME)
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
-CFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CFLAGS_VCDB_NAME).pdb
-
-
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := $(CC)
+CXX := cl
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
+CXXFLAGS := -nologo -GF -EHsc -GR
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -Fo
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY := -c
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -D
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -I
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
+CXXFLAGS_DEBUG := -W4 -Od $(CXXFLAGS_DEBUG_EXTRA)
+CXXFLAGS_RELEASE := -W3 -O2
+CXXFLAGS_LIB_DEBUG := $(CXXFLAGS_LIB_RUNTIME)d
+CXXFLAGS_LIB_RELEASE := $(CXXFLAGS_LIB_RUNTIME)
+CXXFLAGS_LIBMT_DEBUG := $(CXXFLAGS_LIBMT_RUNTIME)d
+CXXFLAGS_LIBMT_RELEASE := $(CXXFLAGS_LIBMT_RUNTIME)
+CXXFLAGS_DLL_DEBUG := -MDd
+CXXFLAGS_DLL_RELEASE := -MD
 
 # Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
+CXXFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CXXFLAGS_VCDB_NAME).pdb
 
 
 # Resource compiler settings.
