--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -17,43 +17,6 @@
 OBJ_SFX := o
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := gcc
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-CC_WARNING_FILE := 2
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET) -Winline
-# -Winvalid-pch
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g3 -Wall -Wundef -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wredundant-decls
-# -Wextra -Wfloat-equal -Wendif-labels -Wmissing-format-attribute -Wpacked -Wpadded -Wunreachable-code
-CFLAGS_DEBUG_EXTRA := -Wtraditional -Wbad-function-cast -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs
-# -Wdeclaration-after-statement -Wold-style-definition
-CFLAGS_RELEASE := -O2
-# -Wdisabled-optimization
-CFLAGS_LIB :=
-CFLAGS_LIBMT := $(CFLAGS_TARGET_MT)
-CFLAGS_DLL := $(CFLAGS_TARGET_MT)
-CFLAGS_DLL_DLL := -fPIC
-
-
 # C++ compiler settings.
 
 # The compiler executable.
@@ -61,33 +24,32 @@ CXX := g++
 
 # The warning output file.
 # ('0' or '' for stdout, '2' for stderr)
-CXX_WARNING_FILE := $(CC_WARNING_FILE)
+CXX_WARNING_FILE := 2
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions -frtti
+CXXFLAGS := $(CXXFLAGS_TARGET) -fexceptions -frtti
+# -Winvalid-pch
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -o 
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY := -c
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -D
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -I
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
-# -Wabi
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-
-
-CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
+CXXFLAGS_DEBUG := -g3 -Wall -Wundef -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wredundant-decls -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
+# -Wextra -Wfloat-equal -Wendif-labels -Wmissing-format-attribute -Wpacked -Wpadded -Wunreachable-code -Wabi
+CXXFLAGS_RELEASE := -O3 -finline-functions -Winline
+# -Wdisabled-optimization
+CXXFLAGS_LIB :=
+CXXFLAGS_LIBMT := $(CXXFLAGS_TARGET_MT)
+CXXFLAGS_DLL := $(CXXFLAGS_TARGET_MT)
+CXXFLAGS_DLL_DLL := -fPIC
 
 
 # Resource compiler settings.
