--- a/make/unix/linux/gcc64/makefile
+++ b/make/unix/linux/gcc64/makefile
@@ -25,7 +25,7 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
 # The target flags.
-CFLAGS_TARGET := -m64
+CXXFLAGS_TARGET := -m64
 
 # Include default GCC definitions.
 include ../../../setup/gcc.ini
