--- a/make/unix/setup/xlc.ini
+++ b/make/unix/setup/xlc.ini
@@ -17,34 +17,6 @@
 OBJ_SFX := o
 
 
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := xlc
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET)
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g
-CFLAGS_RELEASE := -w -qinline -O3 -qstrict
-CFLAGS_LIB := -qnothreaded
-CFLAGS_LIBMT := -qthreaded
-CFLAGS_DLL := -qthreaded
-CFLAGS_DLL_DLL := -qpic
-
-
 # C++ compiler settings.
 
 # The compiler executable.
@@ -53,24 +25,24 @@ CXX := xlC
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -qeh -qrtti
+CXXFLAGS := $(CXXFLAGS_TARGET) -qeh -qrtti
 
 # Output name flag.
-CXX_OUT := $(CC_OUT)
+CXX_OUT := -o 
 # Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_COMPILE_ONLY := -c
 # Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
+CXX_DEFINE := -D
 # Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
+CXX_INCLUDE := -I
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
+CXXFLAGS_DEBUG := -g
+CXXFLAGS_RELEASE := -w -qinline -O3 -qstrict
+CXXFLAGS_LIB := -qnothreaded
+CXXFLAGS_LIBMT := -qthreaded
+CXXFLAGS_DLL := -qthreaded
+CXXFLAGS_DLL_DLL := -qpic
 
 
 ##########################
