--- a/make/unix/sparc/gcc32/makefile
+++ b/make/unix/sparc/gcc32/makefile
@@ -25,7 +25,7 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
 # The target flags.
-CFLAGS_TARGET := -m32
+CXXFLAGS_TARGET := -m32
 
 # Include default GCC definitions.
 include ../../../setup/gcc.ini
