Complete UNICODE support

--- a/make/global.ini
+++ b/make/global.ini
@@ -38,7 +38,10 @@ OutOfMem.cpp	\
 Class.cpp	\
 Except.cpp	\
 Log.cpp	\
+LogHndlr.cpp	\
+LogStrm.cpp	\
 LogStdE.cpp	\
+LogStd.cpp	\
 Stream.cpp	\
 FileStrm.cpp	\
 StdStrm.cpp	\
