--- a/make/msw/setup/msvc.ini
+++ b/make/msw/setup/msvc.ini
@@ -139,9 +139,9 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 # Addditional clean masks for 'clean...' targets.
 MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
+MXCPP_CLEAN_MASK_DEBUG = $(1)$(CXXFLAGS_VCDB_NAME).pdb $(1)$(CXXFLAGS_VCDB_NAME).idb
 MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.pdb $(1)*.ilk $(1)$(CFLAGS_VCDB_NAME).idb
+MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.pdb $(1)*.ilk $(1)$(CXXFLAGS_VCDB_NAME).idb
 
 # Addditional clean masks for 'cleanall...' targets.
 MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
