Improve UNICODE support

--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -29,7 +29,7 @@ CXX_WARNING_FILE := 2
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CXXFLAGS_TARGET) -fexceptions -frtti
+CXXFLAGS := $(CXXFLAGS_TARGET) -fexceptions -frtti -D_GNU_SOURCE
 # -Winvalid-pch
 
 # Output name flag.
@@ -47,8 +47,8 @@ CXXFLAGS_DEBUG := -g3 -Wall -Wundef -Wshadow -Wpointer-arith -Wcast-qual -Wcast-
 CXXFLAGS_RELEASE := -O3 -finline-functions -Winline
 # -Wdisabled-optimization
 CXXFLAGS_LIB :=
-CXXFLAGS_LIBMT := $(CXXFLAGS_TARGET_MT)
-CXXFLAGS_DLL := $(CXXFLAGS_TARGET_MT)
+CXXFLAGS_LIBMT := $(CXXFLAGS_TARGET_MT) -D_REENTRANT -D_THREAD_SAFE
+CXXFLAGS_DLL := $(CXXFLAGS_TARGET_MT) -D_REENTRANT -D_THREAD_SAFE
 CXXFLAGS_DLL_DLL := -fPIC
 
 
