--- a/make/global.ini
+++ b/make/global.ini
@@ -29,12 +29,19 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 
 # Source files list.
-MXCPP_SRC_LIST =	\
+MXCPP_SRC_LIST_SINGLE =	\
 LibMain.cpp	\
+$(MXCPP_SRC_LIST_SINGLE_PLATFORM)
+
+MXCPP_SRC_LIST_INTERNAL =	\
+OutOfMem.cpp	\
+$(MXCPP_SRC_LIST_INTERNAL_PLATFORM)
+
+MXCPP_SRC_LIST =	\
+$(MXCPP_SRC_LIST_SINGLE)	\
 Debug.cpp	\
 Memory.cpp	\
 new.cpp	\
-OutOfMem.cpp	\
 Class.cpp	\
 Except.cpp	\
 Log.cpp	\
@@ -47,6 +54,7 @@ FileStrm.cpp	\
 StdStrm.cpp	\
 App/App.cpp	\
 System/Error.cpp	\
+$(MXCPP_SRC_LIST_INTERNAL)	\
 $(MXCPP_SRC_LIST_PLATFORM)
 
 # Resource files list.
@@ -61,16 +69,21 @@ $(MXCPP_TEST_LIST_PLATFORM)
 
 
 # Main source directory.
-MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)src/
+MXCPP_SRC_NAME := src/
+MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)$(MXCPP_SRC_NAME)
 
 # Main include directory.
-MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
+MXCPP_INCLUDE_NAME := inc
+MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)$(MXCPP_INCLUDE_NAME)
+# Internal include directory.
+MXCPP_INTERNAL_INCLUDE := $(MXCPP_SRC_ROOT)$(MXCPP_INCLUDE_NAME)
 
 # Main resource directory.
 MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
 
 # Main test directory.
-MXCPP_TEST_ROOT := $(MXCPP_PROJECT_ROOT)tests/
+MXCPP_TEST_NAME := tests/
+MXCPP_TEST_ROOT := $(MXCPP_PROJECT_ROOT)$(MXCPP_TEST_NAME)
 
 
 # Directory of dependencies.
@@ -166,6 +179,14 @@ $(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
 $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
 	$(if $(strip $($(compiler)FLAGS_$(libtype)_$(config))),\
 		$(eval MXCPP_$(compiler)FLAGS_$(libtype)_$(config) += $($(compiler)FLAGS_$(libtype)_$(config)))))))
+
+
+# Makefile dependencies.
+#
+# Any change in the makefile initialization files *.ini, will cause full rebuild
+# of all objects.
+MXCPP_MAKEFILE_DEPS := makefile $(filter %.ini,$(MAKEFILE_LIST))
+$(if $(strip $(MXCPP_MAKE_DEBUG)),$(warning MAKEFILE dependencies: $(MXCPP_MAKEFILE_DEPS)))
 
 
 # The standard command for compiling source files.
