--- a/make/mainframe/platform.ini
+++ b/make/mainframe/platform.ini
@@ -44,14 +44,22 @@ tests/TestApp.hpp
 MXCPP_SCR_SUFF := txt
 MXCPP_FINALSCR_SUFF := tso
 
-# The file transfer list.
+# The transfer lists.
 MXCPP_TRANSFER_LIST := Transfer.$(MXCPP_SCR_SUFF)
+MXCPP_TEST_TRANSFER_LIST := TransferTest.$(MXCPP_SCR_SUFF)
+
+# The build scripts.
+MXCPP_BUILD_SCRIPT := Build.$(MXCPP_SCR_SUFF)
+MXCPP_BUILD_RUN_SCRIPT := RunBuild.$(MXCPP_SCR_SUFF)
+MXCPP_TEST_BUILD_SCRIPT := Test.$(MXCPP_SCR_SUFF)
+MXCPP_TEST_BUILD_RUN_SCRIPT := RunTest.$(MXCPP_SCR_SUFF)
 
 # The directory init list.
-MXCPP_DIRINIT_LIST := DirInit.$(MXCPP_SCR_SUFF)
+MXCPP_DIRINIT_LIST := DirList.$(MXCPP_SCR_SUFF)
+MXCPP_DIRINIT_SCRIPT := DirInit.$(MXCPP_SCR_SUFF)
 
 # The connect script.
-MXCPP_LOGIN_SCRIPT := Login.$(MXCPP_SCR_SUFF)
+MXCPP_LOGIN_SCRIPT := Login.$(MXCPP_FINALSCR_SUFF)
 
 # The data set script.
 MXCPP_DSSETUP_SCRIPT := DSsetup.$(MXCPP_SCR_SUFF)
@@ -59,14 +67,21 @@ MXCPP_DSSETUP_SCRIPT := DSsetup.$(MXCPP_SCR_SUFF)
 # The source list for build phase.
 MXCPP_OBJLIB_LIST := LIBOBJ
 MXCPP_NAME_OBJLIB := OBJLIB
+MXCPP_BUILD_JOB := $(MXCPP_CONFIG_SUFFIX)CPP
+MXCPP_TEST_BUILD_JOB := $(MXCPP_CONFIG_SUFFIX)CPPTST
 
 MXCPP_JOBS_LIST :=	\
-$(MXCPP_OBJLIB_LIST)
+$(MXCPP_OBJLIB_LIST)	\
+$(MXCPP_BUILD_JOB)
+
+
+MXCPP_TEST_JOBS_LIST :=	\
+$(MXCPP_TEST_BUILD_JOB)
 
 
 # Names for different TSO script settings.
 
-# Source directory.
+# Directories setup.
 MXCPP_NAME_ROOT_DIR := BASE_DIR
 MXCPP_NAME_INCLUDE_DIR := INCLUDE_DIR
 MXCPP_NAME_SOURCE_DIR := SOURCE_DIR
@@ -83,9 +98,11 @@ MXCPP_NAME_HOST_INL_VALUE := INL
 MXCPP_NAME_HOST_CPP := HOST_CPP
 MXCPP_NAME_HOST_CPP_VALUE := CPP
 MXCPP_NAME_HOST_TEST := HOST_TEST
-MXCPP_NAME_HOST_TEST_VALUE := $(MXCPP_NAME_HOST_CPP_VALUE).TEST
+MXCPP_NAME_HOST_TEST_VALUE := TEST
 MXCPP_NAME_HOST_JOBS := HOST_JOBS
 MXCPP_NAME_HOST_JOBS_VALUE := JOBS
+MXCPP_NAME_HOST_OBJLIB_VALUE := OBJLIB
+MXCPP_NAME_HOST_LNKLIB_VALUE := LNKLIB
 
 
 # EOF #
