Improve the mainframe scripts

--- a/make/mainframe/platform.ini
+++ b/make/mainframe/platform.ini
@@ -58,8 +58,9 @@ MXCPP_TEST_BUILD_RUN_SCRIPT := RunTest.$(MXCPP_SCR_SUFF)
 MXCPP_DIRINIT_LIST := DirList.$(MXCPP_SCR_SUFF)
 MXCPP_DIRINIT_SCRIPT := DirInit.$(MXCPP_SCR_SUFF)
 
-# The connect script.
-MXCPP_LOGIN_SCRIPT := Login.$(MXCPP_FINALSCR_SUFF)
+# The connect scripts.
+MXCPP_LOGIN_SCRIPT := LogSetup.$(MXCPP_SCR_SUFF)
+MXCPP_CONNECT_SCRIPT := ConSetup.$(MXCPP_SCR_SUFF)
 
 # The data set script.
 MXCPP_DSSETUP_SCRIPT := DSsetup.$(MXCPP_SCR_SUFF)
