Improve the IBM Mainframe support

--- a/make/mainframe/platform.ini
+++ b/make/mainframe/platform.ini
@@ -83,6 +83,7 @@ $(MXCPP_TEST_BUILD_JOB)
 # Names for different TSO script settings.
 
 # Directories setup.
+MXCPP_NAME_CURRENT_DIR := CURRENT_DIR
 MXCPP_NAME_ROOT_DIR := BASE_DIR
 MXCPP_NAME_INCLUDE_DIR := INCLUDE_DIR
 MXCPP_NAME_SOURCE_DIR := SOURCE_DIR
