Update exception inlining

--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -44,8 +44,8 @@ CXX_INCLUDE := -I
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := -g3 -Wall -Wundef -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wredundant-decls -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
 # -Wextra -Wfloat-equal -Wendif-labels -Wmissing-format-attribute -Wpacked -Wpadded -Wunreachable-code -Wabi
-CXXFLAGS_RELEASE := -O3 -finline-functions -Winline --param inline-unit-growth=500 --param large-function-growth=1000
-# -Wdisabled-optimization
+CXXFLAGS_RELEASE := -O3 -finline-functions
+# -Wdisabled-optimization -Winline --param inline-unit-growth=500 --param large-function-growth=1000
 CXXFLAGS_LIB :=
 CXXFLAGS_LIBMT := $(CXXFLAGS_TARGET_MT) -D_REENTRANT -D_THREAD_SAFE
 CXXFLAGS_DLL := $(CXXFLAGS_TARGET_MT) -D_REENTRANT -D_THREAD_SAFE
