Improve makefiles (Win-64)

--- a/make/global.ini
+++ b/make/global.ini
@@ -28,7 +28,7 @@ MXCPP_CONFIG_SUFFIX := mx
 MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 
-# Source files list.
+# Source file lists.
 MXCPP_SRC_LIST_SINGLE =	\
 LibMain.cpp	\
 $(MXCPP_SRC_LIST_SINGLE_PLATFORM)
@@ -57,9 +57,11 @@ System/Error.cpp	\
 $(MXCPP_SRC_LIST_INTERNAL)	\
 $(MXCPP_SRC_LIST_PLATFORM)
 
+
 # Resource files list.
 MXCPP_RES_LIST =	\
 $(MXCPP_RES_LIST_PLATFORM)
+
 
 # Tests list.
 MXCPP_TEST_LIST =	\
@@ -118,6 +120,8 @@ MXCPP_MOD_DEBUG := d
 
 
 # Construct library name for different build types.
+#
+# @param $(1) The configuration flags.
 MXCPP_LIB_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(1)
 MXCPP_LIBMT_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)mt$(1)
 MXCPP_DLL_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION_MAJOR)$(MXCPP_LIBRARY_VERSION_MINOR)$(1)
@@ -127,6 +131,7 @@ MXCPP_DLL_CONSTRUCT_FULLNAME_SIMPLE = $(DLL_PFX)$(call MXCPP_DLL_CONSTRUCT_NAME,
 MXCPP_DLL_CONSTRUCT_FULLNAME = $(call MXCPP_DLL_CONSTRUCT_FULLNAME_SIMPLE,$(1))$(if $(strip $(LN)),.$(MXCPP_LIBRARY_VERSION_MAJOR).$(MXCPP_LIBRARY_VERSION_MINOR).$(MXCPP_LIBRARY_VERSION_INTERFACE).$(MXCPP_LIBRARY_VERSION_BUILD))
 
 
+# List of used libraries.
 MXCPP_LIBS :=	\
 $(MXCPP_LIBS_PLATFORM)
 
@@ -231,13 +236,6 @@ MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3)$(if $(strip $(4)), $(4))$(if $(strip $(
 MXCPP_BUILD_LINK_STANDARD = $(call $(if $(strip $($(1)_SCHEME)),$(1)_SCHEME,MXCPP_BUILD_LINK_SCHEME),\
 $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(7))),$(MXCPP_$(1)_FLAGS_$(7)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
 
-#$(if $(strip $($(1)_SCHEME)),$(call $(1)_SCHEME,$($(1)),,$(2),$(3),$(4)),\
-#$(error The build scheme is not defined for the $(1) linker!))
-
-
-#$($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) )$($(1)_OUT)$$@ $(2)$(if $(strip $(4)), $(4))$(if $(strip $(3)), $(3)))
-
-#$$(call DLLC_SCHEMA,$($(1)),,$(2),$(3),$(4))
 
 # The command for building libraries.
 #
