--- a/make/msw/dos32/system.ini
+++ b/make/msw/dos32/system.ini
@@ -17,6 +17,7 @@ $(MXCPP_SRC_LIST_COMPILER)
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)DOS
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)DOS
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
