--- a/make/msw/win16/system.ini
+++ b/make/msw/win16/system.ini
@@ -25,6 +25,7 @@ DLL_SFX := dll
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN16
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN16
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
