--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -25,6 +25,7 @@ DLL_SFX := dll
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN32
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN32
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(LNKC_LIB_PFX)kernel32$(LNKC_LIB_SFX) \
 $(LNKC_LIB_PFX)user32$(LNKC_LIB_SFX) \
