--- a/make/msw/win64/system.ini
+++ b/make/msw/win64/system.ini
@@ -27,6 +27,7 @@ DLL_SFX := dll
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN64
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN64
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
