--- a/make/unix/aix/system.ini
+++ b/make/unix/aix/system.ini
@@ -20,6 +20,7 @@ DLL_SFX := so
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)AIX
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)AIX
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
