--- a/make/unix/hpux/system.ini
+++ b/make/unix/hpux/system.ini
@@ -20,6 +20,7 @@ DLL_SFX := sl
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)HPUX
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)HPUX
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
