--- a/make/unix/sparc/system.ini
+++ b/make/unix/sparc/system.ini
@@ -20,6 +20,7 @@ DLL_SFX := so
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)SPARC
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)SPARC
 
+# List of used system libraries.
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
 
