--- a/make/global.ini
+++ b/make/global.ini
@@ -29,14 +29,18 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 
 # Source file lists.
+
+# Source files without compound headers.
 MXCPP_SRC_LIST_SINGLE =	\
 LibMain.cpp	\
 $(MXCPP_SRC_LIST_SINGLE_PLATFORM)
 
+# Internal sources (compoud headers considered internal).
 MXCPP_SRC_LIST_INTERNAL =	\
 OutOfMem.cpp	\
 $(MXCPP_SRC_LIST_INTERNAL_PLATFORM)
 
+# Library source files.
 MXCPP_SRC_LIST =	\
 $(MXCPP_SRC_LIST_SINGLE)	\
 Debug.cpp	\
