Refactor operators new and delete

--- a/doc/makefile
+++ b/doc/makefile
@@ -38,13 +38,13 @@ all:	public internal
 # Build the public documentation.
 public $(MXCPP_CHM_NAME):	clean_public
 	-@echo Creating the [public] documentation ...
-	@$(DC) $(DCFLAGS) Doxyfile
+	@$(DC) $(DCFLAGS) Doxyfile $(DC_OUTPUT)
 	-@echo ... the [public] documentation is done.
 
 # Build the internal documentation.
 internal internal/$(MXCPP_CHM_NAME):	clean_internal
 	-@echo Creating the [internal] documentation ...
-	@$(DC) $(DCFLAGS) Doxyfile.internal
+	@$(DC) $(DCFLAGS) Doxyfile.internal $(DC_OUTPUT)
 	-@echo ... the [internal] documentation is done.
 
 # Start the main documentation.
