--- a/doc/makefile.ini
+++ b/doc/makefile.ini
@@ -9,6 +9,8 @@
 
 # The documentation compiler.
 DC := doxygen
+# -d Preprocessor
+# DC_OUTPUT := >Preprocess.txt
 
 # The compiler flags.
 DCFLAGS :=
